--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-scripts": "^5.0.1",
     "riact": "^0.0.5",
     "scripts": "^0.1.0"
