--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.6.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "tailwindcss": "^3.3.0",
+    "@types/node": "20.11.6",
+    "@types/react": "18.2.48",
+    "typescript": "5.3.3"
   }
 }
