--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "@types/node": "20.11.6",
-    "@types/react": "18.2.48",
-    "typescript": "5.3.3"
+    "@types/react": "18.2.48"
   }
 }
