--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "scripts": "^0.1.0"
   },
   "devDependencies": {
+    "@types/node": "20.11.6",
+    "@types/react": "18.2.48",
     "autoprefixer": "^10.0.1",
     "daisyui": "^4.6.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "@types/node": "20.11.6",
-    "@types/react": "18.2.48"
+    "tailwindcss": "^3.3.0"
   }
 }
